--- a/src/styles/PokemonInfo.css
+++ b/src/styles/PokemonInfo.css
@@ -10,15 +10,20 @@
 }
 .pokemon_info h2{
   color: var(--black);
-  font-size: 3rem;
+  font-size: 2.2rem;
 }
 .pokemon_image{
-  min-width: 150px;
-  max-width: 250px;
+  min-width: 60px;
+  max-width: 180px;
   border-radius: 50% 50%;
   background-color: blueviolet;
+  overflow: hidden;
+}
+.pokemon_image img{
+  width: 100%;
 }
 .pokemon_number{
   color: var(--black);
-  font-size: 2rem;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
