--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@
   --steel: #1D8A99;
   --fighting: #2F2F2F;
   --default: #2A1A1F;
+  --dark: #444040;
 }
 *, *::after, *::before{
   margin: 0;
@@ -130,7 +131,9 @@ li{
 }
 .color_fighting{
   background-color: var(--fighting);
+  color: white;
 }
 .color_default{
   background-color: var(--default);
+  color: white;
 }
