--- a/src/styles/ControlNav.css
+++ b/src/styles/ControlNav.css
@@ -16,12 +16,12 @@
   grid-column: 1/8;
   border: none;
   border-radius: 15px;
+  box-shadow: 5px 3px 4px 6px rgba(0, 0, 0, 0.2); 
 }
 .btn{
   border: none;
   padding: 5px;
   border-radius: 15px;
-  background-color: var(--electric);
   background-color: black;
   color: white;
   font-weight: bold;
