Se dejo la aplicación con todas las funcionalidades basicas listas. Falta agregar una imagen de fondo

--- a/src/styles/LedButtons.css
+++ b/src/styles/LedButtons.css
@@ -22,6 +22,7 @@
   padding: 5px;
   border-radius: 10px;
   box-shadow: 2px 5px 4px 4px rgba(0, 0, 0, 0.2); 
+  cursor: pointer;
 }
 .leds_containers{
   grid-column: 2/4;
@@ -38,15 +39,12 @@
   box-shadow: 3px 5px 2px 1px rgba(0, 0, 0, 0.2); 
 }
 .led_green{
-  background-color: greenyellow;
-
   background-image: -moz-linear-gradient(top, #13fB04 0%, #58e343 50%, #ADED99 100%);
   background-image: -ms-linear-gradient(top, #13fB04 0%, #58e343 50%, #ADED99 100%);
   background-image: -o-linear-gradient(top, #13fB04 0%, #58e343 50%, #ADED99 100%);  
   background-image: -webkit-linear-gradient(top, #13fB04 0%, #58e343 50%, #ADED99 100%);
 }
 .led_blue{
-  background-color: blue;
   background-image: -moz-linear-gradient(top, #0431f9 0%, #2f51e9 50%, #697cd5 100%);
   background-image: -ms-linear-gradient(top, #0441f9 0%, #2f51e9 50%, #697cd5 100%);
   background-image: -o-linear-gradient(top, #0441f9 0%, #2f51e9 50%, #697cd5 100%);  
