--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,6 @@
   line-height: 24px;
   font-weight: 400;
 
-
-  /* background-color: #242424; */
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -14,7 +11,7 @@
   -webkit-text-size-adjust: 100%;
 
 
-  --red: #fe0000;
+  --red: #c60d0d;
   --yellow: #cfe62f;
   --green: #00bf2a;
   --green-dark: #31a23a;
@@ -28,7 +25,7 @@
   --normal: #B09398;
   --fire: #FF675C;
   --water: #0596C7;
-  --ice: #AFEAFD;
+  --ice: #7dd7f3;
   --rock: #999799;
   --flying: #7AE7C7;
   --grass: #4A9681;
@@ -64,8 +61,9 @@ li{
   list-style: none;
 }
 .container1{
-  max-width: 450px;
+  max-width: 600px;
   background-color: var(--red);
+  margin: 0 auto;
 }
 .hiden_elemnt{
   display: none;
