--- a/src/styles/CardPokemon.css
+++ b/src/styles/CardPokemon.css
@@ -53,13 +53,15 @@
   border-radius: 50% 50%;
   cursor: pointer;
   border: 5px solid red;
-  background-color: white;
+  background: rgb(167,138,124);
+  background: linear-gradient(0deg, rgba(167,138,124,1) 5%, rgba(208,12,12,1) 100%); 
   transition-duration: 0.5s;
 }
 .btn_powers:hover{
   color: white;
-  border: 5px solid transparent;
-  background-color: blue;
+  border: 5px solid blue;
+  background: rgb(167,138,124);
+  background: linear-gradient(0deg, rgba(167,138,124,1) 1%, rgba(23,11,228,1) 57%); 
   transition-duration: 0.8s;
 }
 .btn_powers p{
