--- a/src/styles/ControlNav.css
+++ b/src/styles/ControlNav.css
@@ -17,6 +17,7 @@
   border: none;
   border-radius: 15px;
   box-shadow: 5px 3px 4px 6px rgba(0, 0, 0, 0.2); 
+  padding: 0 15px;
 }
 .btn{
   border: none;
