--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,15 @@ html{
 }
 body{
   font-family: sans-serif;  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;  
+  background-image: url("./assets/image/paisaje_fondo.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 img{
   width: 100%;
